Add module aliases to package.json and comment out log level console output in console.ts

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "prepare": "bun run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "_moduleAliases": {
+    "@": "./dist"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
